src/GravyTraders.Api.Products/Manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Gravy-traders-products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Gravy-traders-products
  template:
    metadata:
      labels:
        app: Gravy-traders-products
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: Gravy-traders-products
          #Note: The '{ENVIRONMENT}' token will be substituted with the value of the ENVIRONMENT github secret by github workflow.
          image: Gravytradersacr{ENVIRONMENT}.azurecr.io/Gravytradersapiproducts:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
