src/GravyTraders.Api.Products/Manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravy-traders-products
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: gravy-traders-products
